Bug 565949 - Remove usage of deprecated new Long and new Double constructors
Change-Id: I91933a37b055da0b4993a2c52aeedc5054e86541
Signed-off-by: Thomas Watson <tjwatson@us.ibm.com>