@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2018 IBM Corporation and others.
+ * Copyright (c) 2004, 2020 IBM Corporation and others.
  *
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
@@ -71,7 +71,7 @@ public class ResolverBundle extends VersionSupplier implements Comparable<Resolv
 
 	ResolverBundle(BundleDescription bundle, ResolverImpl resolver) {
 		super(bundle);
-		this.bundleID = new Long(bundle.getBundleId());
+		this.bundleID = Long.valueOf(bundle.getBundleId());
 		this.resolver = resolver;
 		initialize(bundle.isResolved());
 	}
